crates/ts/tests/snapshots/baseline_diff__baseline_keep_default_when_no_named_sibling.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: default
  qualified_name: pkg/dist/utils.default
  kind: Constant
  change_type: SymbolRemoved
  is_breaking: true
  description: "Exported constant `default` was removed"
  before: "constant: default"
  after: ~
  has_migration_target: false
