crates/ts/tests/snapshots/baseline_diff__baseline_made_sync.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: f
  qualified_name: f
  kind: Function
  change_type: MadeSync
  is_breaking: true
  description: "`f` was made sync (Promise wrapper removed)"
  before: Promise<string>
  after: string
  has_migration_target: false
