crates/ts/tests/snapshots/baseline_diff__baseline_moved_from_next_to_deprecated.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: DualListSelector
  qualified_name: pkg/dist/esm/next/components/DLS/DLS.DualListSelector
  kind: Variable
  change_type: "Relocated { from: Symbol { kind: Variable }, to: Symbol { kind: Variable } }"
  is_breaking: true
  description: "variable `DualListSelector` moved to deprecated exports"
  before: pkg/dist/esm/next/components/DLS/DLS.DualListSelector
  after: pkg/dist/esm/deprecated/components/DLS/DLS.DualListSelector
  has_migration_target: false
