crates/ts/tests/snapshots/baseline_diff__baseline_moved_to_deprecated.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: Chip
  qualified_name: pkg/dist/esm/components/Chip/Chip.Chip
  kind: Variable
  change_type: SymbolMovedToDeprecated
  is_breaking: true
  description: "variable `Chip` moved to deprecated exports"
  before: pkg/dist/esm/components/Chip/Chip.Chip
  after: pkg/dist/esm/deprecated/components/Chip/Chip.Chip
  has_migration_target: false
