crates/ts/tests/snapshots/baseline_diff__baseline_moved_to_deprecated_with_member_changes.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: ChipProps
  qualified_name: pkg/dist/esm/components/Chip/Chip.ChipProps
  kind: Interface
  change_type: SymbolMovedToDeprecated
  is_breaking: true
  description: "interface `ChipProps` moved to deprecated exports"
  before: pkg/dist/esm/components/Chip/Chip.ChipProps
  after: pkg/dist/esm/deprecated/components/Chip/Chip.ChipProps
  has_migration_target: false
- symbol: isActive
  qualified_name: isActive
  kind: Property
  change_type: PropertyRemoved
  is_breaking: true
  description: "property `isActive` was removed from `ChipProps`"
  before: "property: isActive: boolean"
  after: ~
  has_migration_target: false
