crates/ts/tests/snapshots/baseline_diff__baseline_named_namespace_reexport_not_filtered.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: utils
  qualified_name: index.utils
  kind: Namespace
  change_type: "Removed(Symbol { kind: Namespace })"
  is_breaking: true
  description: "Exported namespace `utils` was removed"
  before: "namespace: utils"
  after: ~
  has_migration_target: false
