crates/ts/tests/snapshots/baseline_diff__baseline_no_rename_for_different_types.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: isActive
  qualified_name: isActive
  kind: Property
  change_type: "Removed(Member { name: \"isActive\", kind: Property })"
  is_breaking: true
  description: "property `isActive` was removed from `Props`"
  before: "property: isActive: boolean"
  after: ~
  has_migration_target: false
- symbol: count
  qualified_name: count
  kind: Property
  change_type: "Added(Member { name: \"count\", kind: Property })"
  is_breaking: true
  description: "property `count` was added to `Props`"
  before: ~
  after: "property: count: number"
  has_migration_target: false
